--- a/views/registro.html
+++ b/views/registro.html
@@ -92,7 +92,7 @@
                 <button>Registrarse</button>
                 <section class="fs-conectar">
                     <a>Registrarme con</a>
-                    <img href="google.com" class="img-google" src="/images/google-login.png" alt="icono-google">
+                    <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
                     <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
                 </section>    
             </fieldset>
