--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,27 +1,27 @@
 <footer>
     <section class="main-foot-bar">
 <picture class="logo-footer">
-        <img src="/images/copa.png" alt="logo" width="100%" height="100%">
+        <a href="/"><img src="/images/copa.png" alt="logo" width="100%" height="100%"></a>
     </picture>   
     <article class="columnas">
         <ul class="link-footer">
             <li><a class="link-footer-principal" href="/catalogo">Vinos</a></li>
-            <li><a href="/nosotros">Colecciones</a></li>
-            <li><a href="/contacto">Bodegas</a></li>
+            <li><a href="/catalogo">Colecciones</a></li>
+            <li><a href="/catalogo">Bodegas</a></li>
         </ul>
         <ul class="link-footer">
-            <li><a class="link-footer-principal" href="/vinos">Nosotros</a></li>
+            <li><a class="link-footer-principal" href="/nosotros">Nosotros</a></li>
             <li><a href="/nosotros">Sobre nosotros</a></li>
-            <li><a href="/contacto">Nuestra mision</a></li>
+            <li><a href="/nosotros">Nuestra mision</a></li>
         </ul>
         <ul class="link-footer">
-            <li><a class="link-footer-principal" href="/vinos">Contacto</a></li>
+            <li><a class="link-footer-principal" href="https://www.rutiniwines.com/contacto/"">Contacto</a></li>
             <li><a href="https://es.wikipedia.org/wiki/Buenos_Aires" target="_blank">Oficinas Buenos Aires</a></li>
             <li><a href="https://es.wikipedia.org/wiki/Mendoza_(Argentina)" target="_blank">Oficinas Mendoza</a></li>
         </ul>
     </article>
     <picture class="logo-footer">
-        <img src="/images/nombre.png" alt="logo" width="100%" height="100%">
+        <a href="/"><img src="/images/nombre.png" alt="logo" width="100%" height="100%"></a>
     </picture>
 </section>
 <nav class="icon-footer">
