--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -1,13 +1,13 @@
 <header class="main-header">
     <section class="main-header-top-bar">
         <picture class="logo">
-        <img  src="/images/logo.png" alt="icono">
+            <a class="" href="/"><img  src="/images/logo.png" alt="icono"></a>
             </picture>
 
             <nav class="main-navbar">
-                <a href="http://localhost:3040/catalogo.html">Vinos</a>
+                <a href="/catalogo">Vinos</a>
                 <a class="borde" href="/nosotros">Nosotros</a>
-                <a href="/contacto">Contacto</a>
+                <a href="https://www.rutiniwines.com/contacto/">Contacto</a>
             </nav>
 
                 <form action="#" class="formsearch">
@@ -15,8 +15,8 @@
                 </form>
         
                 <nav class="icon-carrito-usuario">
-                    <a href="" ><i class="fas fa-shopping-cart"></i></a>
-                    <a href="" ><i class="fas fa-user"></i></a>
+                    <a href="/carrito" ><i class="fas fa-shopping-cart"></i></a>
+                    <a href="/registro" ><i class="fas fa-user"></i></a>
                 </nav>
 
                 <div class="burger-menu">
@@ -24,6 +24,3 @@
                 </div> 
             </section>           
 </header>
-<picture>
-    <img class="banner" src="/images/BANNER-VINO.jpg" alt="banner">
-</picture>  
