--- a/public/css/producto.css
+++ b/public/css/producto.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: "Roboto";
-    background:  #ebebeb;;
+    background:  #ebebeb;
 }
 
 main {
@@ -206,16 +206,10 @@ img {
 }
 
 
-
-
-
-
-
-
-
-
-
 @media (min-width: 768px) {
+    body {        
+        background-color: #440217
+    }
     
     .caja-producto-principal {
        flex-wrap: nowrap;
