--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -115,10 +118,6 @@ fieldset label{
     display: contents;
 }
 
-
-
-
-
 .fs-kl input {
     width:fit-content;
     box-shadow: none;
@@ -145,7 +144,9 @@ fieldset label{
 
 
 @media (min-width: 768px) {  /*TABLET*/
-
+    body {        
+        background-color: #440217
+    }
 
 
 .main-register {
