--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -1,47 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
-    <link rel="stylesheet" href="/css/normalize.css"> 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&m=free">
-    <link rel="stylesheet" href="/css/carrito.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-
-
-</head>
+<%- include("./includes/head") %>
 <body>
-    <header class="main-header">
-        <section class="main-header-top-bar">
-            <picture class="logo">
-            <img  src="/images/logo.png" alt="icono">
-                </picture>
-
-                <nav class="main-navbar">
-                    <a href="http://localhost:3040/catalogo.html">Vinos</a>
-                    <a class="borde" href="/nosotros">Nosotros</a>
-                    <a href="/contacto">Contacto</a>
-                </nav>
-
-                    <form action="#" class="formsearch">
-                        <input type="search" name="barra" placeholder="Buscar..."><button class="iconolupa"><i class="fas fa-search"></i></button>
-                    </form>
-            
-                    <nav class="icon-carrito-usuario">
-                        <a href="" ><i class="fas fa-shopping-cart"></i></a>
-                        <a href="" ><i class="fas fa-user"></i></a>
-                    </nav>
-
-                    <div class="burger-menu">
-                        <a class="tresbarras" href="/menu"><i class="fas fa-bars"></i></a>
-                    </div> 
-                </section>           
-    </header>
+    <%- include("./includes/header") %>
  
     <main>
 
@@ -161,40 +120,7 @@
 
 
     </main>
-    <footer>
-        <section class="main-foot-bar">
-  <picture class="logo-footer">
-            <img src="/images/copa.png" alt="logo" width="100%" height="100%">
-        </picture>   
-        <article class="columnas">
-            <ul class="link-footer">
-                <li><a class="link-footer-principal" href="/catalogo">Vinos</a></li>
-                <li><a href="/nosotros">Colecciones</a></li>
-                <li><a href="/contacto">Bodegas</a></li>
-            </ul>
-            <ul class="link-footer">
-                <li><a class="link-footer-principal" href="/vinos">Nosotros</a></li>
-                <li><a href="/nosotros">Sobre nosotros</a></li>
-                <li><a href="/contacto">Nuestra mision</a></li>
-            </ul>
-            <ul class="link-footer">
-                <li><a class="link-footer-principal" href="/vinos">Contacto</a></li>
-                <li><a href="https://es.wikipedia.org/wiki/Buenos_Aires" target="_blank">Oficinas Buenos Aires</a></li>
-                <li><a href="https://es.wikipedia.org/wiki/Mendoza_(Argentina)" target="_blank">Oficinas Mendoza</a></li>
-            </ul>
-        </article>
-        <picture class="logo-footer">
-            <img src="/images/nombre.png" alt="logo" width="100%" height="100%">
-        </picture>
-    </section>
-    <nav class="icon-footer">
-        <a class="icon-color" href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a class="icon-color" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a class="icon-color" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a class="icon-color" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-    </nav>
-        <p class="copyright">© EWINE 2021- Todos los derechos reservados | Beber con moderacion. Prohibida su venta a menores de 18 años.</p>
-    </footer>
+    <%- include("./includes/footer") %>
 </body>
 </html>
 
