--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -13,19 +13,21 @@
                 <input type="password" id="pass" placeholder="**********">
             </fieldset>
 
-            <fieldset class="fs-button">
-                <button>Identificarse</button>
-               <section class="fs-conectar">
-                    <a>Conectar con | </a>
-                    <img href="google.com" class="img-google" src="/images/google-login.png" alt="icono-google">
-                    <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
-                </section>    
-            </fieldset>
-            
             <fieldset class="fs-kl">
                 <input type="checkbox" name="kl" id="kl">
                 <label for="kl">Recordarme</label>
             </fieldset> 
+
+            <fieldset class="fs-button">
+                <button>Identificarse</button>   
+            </fieldset>
+            <section class="fs-conectar">
+                <a>Conectar con | </a>
+                <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
+                <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
+            </section> 
+            
+
         </form>
 
         <form class="register-signin">
@@ -50,14 +52,14 @@
                 <label for="pass-reg2">Confirmar Contraseña</label>
                 <input type="password" id="pass-reg2" placeholder="Confirmar">
             </fieldset>
-            <fieldset class="fs-button-si">
-                <button>Registrarse</button>
-                <section class="fs-conectar">
-                    <a>Registrarme con</a>
-                    <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
-                    <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
-                </section>    
+            <fieldset class="fs-button">
+                <button>Registrarse</button>    
             </fieldset>
+            <section class="fs-conectar">
+                <a>Registrarme con | </a>
+                <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
+                <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
+            </section>
             
             
         </form>
