--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -21,7 +21,7 @@
         <article class="titulares">Destacados</article>
         <section class="cajadecajas">
             <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -32,7 +32,7 @@
                     </div></a>
             </article>
             <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Rutini-Rose-de-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -43,7 +43,7 @@
                     </div></a>
                 </article>
                 <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Rutini-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -54,7 +54,7 @@
                     </div></a>
                 </article> 
                 <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -69,7 +69,7 @@
     <article class="titulares">Sección de Ofertas</article>
         <section class="cajadecajas">
             <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -91,7 +91,7 @@
                     </div></a>
                 </article>
                 <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Rutini-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
@@ -102,7 +102,7 @@
                     </div></a>
                 </article> 
                 <article class="vinos">
-                <a href="/producto"><picture>
+                <a href="/vino"><picture>
                         <img width="90%" height="70%" src="/images/Single-Vineyard-Gualtallary-Malbec.webp" alt="blanco">
                     </picture>
                     <div class="info">
