--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -9,49 +9,53 @@
     width: 85vw;
 }
 .menuVertical{
-    width: 15%;
+    width: 16%;
     min-height: 150vh;
     background-color: #F4F4F4;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .menuVertical article{
     margin-bottom: 20%;
 }
 .menuVertical h3{
-    margin-left: 5%;
-    position: relative;
-
+    font-size: 1.2rem;
     font-family:"Roboto";
     font-weight: 500;
+    margin-bottom: 2%;
 }
 .menuVertical nav{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 5px;
-    margin-left: 5%;
+    
 }
 .menuVertical nav a{
+    font-size: 1rem;
     font-style: normal;
     text-decoration: none;
     color: black;
 }
 .catalogo{
     background-color: gainsboro;
-    width: 85%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    gap: 1px 25px;
+    gap: 1px 30px;
+    padding: 25px;
     flex-wrap: wrap;
+    min-height: 150vh;
 }
 .vinos{
-    background-color: white;
-    width: 18%;
-    height: 28%;
-    margin-top: 3%;
-    transition: all 0.5s;
+    margin: 3vh 0;
+    background: white;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    box-shadow: none;
+    border-radius: 10px;
+    transition: all 0.2s;
 }
 .vinos:hover{
     box-shadow:0px 0px 10px rgb(100, 100, 100);
@@ -67,16 +71,72 @@
     font-size: 12px;
 }
 .info button{
-    width: 50%;
+    width: 20vh;
+    margin-bottom: 3vh;
     border-radius: 6px;
     border: none;
     background-color: #383D41;
     color: gainsboro ;
     height: 1.5em;
+    transition: all 0.2s;
+}
+.info button:hover{
+    box-shadow:0px 0px 10px #AD9863;
+}
+.info button:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+a {
+    text-decoration: none;
+    color: black;
 }
 .aclaracion{
 font-weight: 300;
 }
 .precio{
     font-weight: bold;
+}
+.vinos picture img{
+    border-radius: 10px;
+}
+@media (max-width: 767px){
+.menuVertical{
+    width: 40%;
+}
+.vinos{
+    width: 30vh;
+        height: 45vh;
+}
+.catalogo{
+    width: 100%;
+    gap: 5px;
+}
+.main-content{
+    width: 100%;
+}
+}
+@media (min-width: 768px) and (max-width: 1200px){
+    .menuVertical{
+        width: 20%;
+    }
+    .menuVertical h3{
+        font-size: .9rem;
+    }
+    .menuVertical nav a{
+        font-size: .9rem;
+    }
+    .vinos{
+        width: 25vh;
+        height: 45vh;
+    }
+    .catalogo{
+        min-height: 200vh;
+    }
+    .info button{
+        height: 1rem;
+        font-size: .7rem;
+    }
 }
