--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -7,7 +7,7 @@
             <nav class="main-navbar">
                 <a href="/catalogo">Vinos</a>
                 <a class="borde" href="/nosotros">Nosotros</a>
-                <a href="https://www.rutiniwines.com/contacto/">Contacto</a>
+                <a href="https://www.rutiniwines.com/contacto/" target="_blank">Contacto</a>
             </nav>
 
                 <form action="#" class="formsearch">
@@ -15,8 +15,9 @@
                 </form>
         
                 <nav class="icon-carrito-usuario">
-                    <a href="/carrito" ><i class="fas fa-shopping-cart"></i></a>
-                    <a href="/registro" ><i class="fas fa-user"></i></a>
+                    <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="/registro"><i class="fas fa-user"></i></a>
+                    <a href="/login"><i class="fas fa-sign-in-alt"></i></a>
                 </nav>
 
                 <div class="burger-menu">
