--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -2,33 +2,7 @@
 <body>
     <%- include("./includes/header") %>
     <main class="main-register">
-        <form class="register-login">
-            <h2>Identificarse</h2>
-            <fieldset class="fs-e-mail">
-                <label for="e-mail">Correo Electronico</label>
-                <input type="email" id="e-mail" placeholder="Direccion de Email">
-            </fieldset>
-            <fieldset class="fs-pass">
-                <label for="pass">Contraseña</label>
-                <input type="password" id="pass" placeholder="**********">
-            </fieldset>
 
-            <fieldset class="fs-kl">
-                <input type="checkbox" name="kl" id="kl">
-                <label for="kl">Recordarme</label>
-            </fieldset> 
-
-            <fieldset class="fs-button">
-                <button>Identificarse</button>   
-            </fieldset>
-            <section class="fs-conectar">
-                <a>Conectar con | </a>
-                <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
-                <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
-            </section> 
-            
-
-        </form>
 
         <form class="register-signin">
             <h2>Registro</h2>
@@ -52,13 +26,16 @@
                 <label for="pass-reg2">Confirmar Contraseña</label>
                 <input type="password" id="pass-reg2" placeholder="Confirmar">
             </fieldset>
+            <label class="boton-imagen" for="file">
+                <input type="file" name="file" id="file" multiple>
+            </label>
             <fieldset class="fs-button">
                 <button>Registrarse</button>    
             </fieldset>
             <section class="fs-conectar">
                 <a>Registrarme con | </a>
-                <img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google">
-                <img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb">
+                <a href="http://google.com" target="_blank"><img href="google.com" class="img-google" src="/images/logo-google.png" alt="icono-google"></a>
+                <a href="http://facebook.com" target="_blank"><img href="facebook.com" class="img-fb" src="/images/logo-fb.jpg" alt="icono-fb"></a>
             </section>
             
             
