retoques menores login

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -22,7 +22,7 @@
                 <button>Identificarse</button>   
             </fieldset>
             <fieldset class="fs-button">
-                <button>Registrarse</button>   
+                <a href="/registro"><button>Registrarse</button></a>  
             </fieldset>
         </article>
             <section class="fs-conectar">
