--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -16,7 +16,7 @@
         
                 <nav class="icon-carrito-usuario">
                     <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="/registro"><i class="fas fa-user"></i></a>
+                    <a href="/register"><i class="fas fa-user"></i></a>
                     <a href="/login"><i class="fas fa-sign-in-alt"></i></a>
                 </nav>
 
