--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,16 +1,16 @@
-<%- include("./includes/head") %>
+<%- include("../includes/head") %>
 <body>
-    <%- include("./includes/header") %>
+    <%- include("../includes/header") %>
     <main class="main-register">
-        <form class="register-login">
+        <form action ="/users/access" method="post" class="register-login">
             <h2>Identificarse</h2>
             <fieldset class="fs-e-mail">
-                <label for="e-mail">Correo Electronico</label>
-                <input type="email" id="e-mail" placeholder="Direccion de Email">
+                <label for="email">Correo Electronico</label>
+                <input name="email" type="email" id="email" placeholder="Direccion de Email">
             </fieldset>
             <fieldset class="fs-pass">
-                <label for="pass">Contraseña</label>
-                <input type="password" id="pass" placeholder="**********">
+                <label  for="password">Contraseña</label>
+                <input name="password" type="password" id="password" placeholder="**********">
             </fieldset>
 
             <fieldset class="fs-kl">
@@ -19,10 +19,10 @@
             </fieldset> 
             <article class="botones-login">
             <fieldset class="fs-button">
-                <button>Identificarse</button>   
+                <button  type="submit">Identificarse</button>   
             </fieldset>
             <fieldset class="fs-button">
-                <a href="/registro"><button>Registrarse</button></a>  
+                <a href="/registro" ><button>Registrarse</button></a>  
             </fieldset>
         </article>
             <section class="fs-conectar">
@@ -36,6 +36,6 @@
 
 
     </main>
-    <%- include("./includes/footer") %>
+    <%- include("../includes/footer") %>
 </body>
 </html>
