--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,26 +1,26 @@
-<%- include("./includes/head") %>
+<%- include("../includes/head") %>
 <body>
-    <%- include("./includes/header") %>
+    <%- include("../includes/header") %>
     <main class="main-register">
 
 
-        <form class="register-signin">
+        <form action ="/users/" method="post" class="register-signin">
             <h2>Registro</h2>
             <fieldset class="fs-nombre">
                 <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" placeholder="Ingrese su nombre completo">
+                <input name="nombre" type="text" id="nombre" placeholder="Ingrese su nombre completo">
             </fieldset>
             <fieldset class="fs-apellido">
                 <label for="apellido">Apellido</label>
-                <input type="text" id="apellido" placeholder="Ingrese su apellido">
+                <input name="apellido" type="text" id="apellido" placeholder="Ingrese su apellido">
             </fieldset>
             <fieldset class="fs-e-mail-reg">
-                <label for="e-mail-reg">Correo Electronico</label>
-                <input type="email" id="e-mail-reg" placeholder="Direccion de Email">
+                <label for="email">Correo Electronico</label>
+                <input type="email" id="email" placeholder="Direccion de Email">
             </fieldset>
             <fieldset class="fs-pass-reg">
-                <label for="pass-reg">Contraseña</label>
-                <input type="password" id="pass-reg" placeholder="***********">
+                <label for="password">Contraseña</label>
+                <input name="password" type="password" id="password" placeholder="***********">
             </fieldset>
             <fieldset class="fs-pass-reg2">
                 <label for="pass-reg2">Confirmar Contraseña</label>
@@ -30,7 +30,7 @@
                 <input type="file" name="file" id="file" multiple>
             </label>
             <fieldset class="fs-button">
-                <button>Registrarse</button>    
+                <button type="submit" >Registrarse</button>    
             </fieldset>
             <section class="fs-conectar">
                 <a>Registrarme con | </a>
@@ -40,8 +40,14 @@
             
             
         </form>
+        <% if (locals.errors && errors.email) { %>
+         <p><%= errors.email.msg %> </p>
+        <% } %>
+        <% if (locals.errors && errors.password) { %>
+            <p><%= errors.password.msg %> </p>
+           <% } %>
 
     </main>
-    <%- include("./includes/footer") %>
+    <%- include("../includes/footer") %>
 </body>
 </html>
