login, session - usuarios2

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("./includes/head") %>
 <body>
 
-    <%- include("./includes/header") %>   
+    <%- include("./includes/header.ejs") %>   
     <picture>
         <img class="banner" src="/images/BANNER-VINO.jpg" alt="banner">
     </picture>   
