--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -33,6 +33,12 @@
             
 
         </form>
+        <% if (locals.errors && errors.email) { %>
+            <p><%= errors.email.msg %> </p>
+           <% } %>
+           <% if (locals.errors && errors.password) { %>
+               <p><%= errors.password.msg %> </p>
+              <% } %>
 
 
     </main>
