--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -1,6 +1,6 @@
-<%- include("./includes/head") %>
+<%- include("../includes/head") %>
 <body>
-    <%- include("./includes/header") %>
+    <%- include("../includes/header") %>
     <main class="main-register">
         
         <h2>Perfil</h2>
