--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -16,7 +16,7 @@
             </fieldset>
             <fieldset class="fs-e-mail-reg">
                 <label for="email">Correo Electronico</label>
-                <input type="email" id="email" placeholder="Direccion de Email">
+                <input type="text" name="email" id="email" placeholder="Direccion de Email">
             </fieldset>
             <fieldset class="fs-pass-reg">
                 <label for="password">Contraseña</label>
