--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -14,6 +14,6 @@
         </form>
 
     </main>
-    <%- include("./includes/footer") %>
+    <%- include("../includes/footer") %>
 </body>
 </html>
