--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -21,20 +21,20 @@
                     <a href="/register"><i class="fas fa-user"></i></a>
                     <a href="/login"><i class="fas fa-sign-in-alt"></i></a>
                     <% } else if (user && user.isAdmin) { %>
-                        <a href="/"><%= user.nombre + " Ewine"%></a>
-                        <form action="users/logout" method="post">
+                        <a href="/profile"><%= user.nombre + " Ewine"%></a>
+                        <form action="/users/logout" method="post">
                             <button type="submit">
                                 <i class="fas fa-trash"></i>
                             </button>
                         </form>
                     <% } else { %>
-                        <a href="profile"><%= user.nombre %></a>
-                        <form action="users/logout" method="post">
+                        <a href="/profile"><%= user.nombre %></a>
+                       
+                        <form action="/users/logout" method="post">
                             <button type="submit">
                                 <i class="fas fa-trash"></i>
                             </button>
                         </form>
-
                     <% } %>
 
                 </nav>
