usuarios 2 cierre domingo

--- a/public/css/products/create.css
+++ b/public/css/products/create.css
@@ -9,7 +9,7 @@
 body {
     font-family: "Roboto";
     background:  #ebebeb;;
-    background-color: red;
+    background-color: #440217;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
