--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -22,7 +22,7 @@
                 <button  type="submit">Identificarse</button>   
             </fieldset>
             <fieldset class="fs-button">
-                <a href="/registro" ><button>Registrarse</button></a>  
+                <a href="/users/register" ><button>Registrarse</button></a>  
             </fieldset>
         </article>
             <section class="fs-conectar">
