--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
     <main class="main-register">
 
 
-        <form action ="/users/" method="post" class="register-signin">
+        <form action ="/users/" enctype="multipart/form-data" method="post" class="register-signin">
             <h2>Registro</h2>
             <fieldset class="fs-nombre">
                 <label for="nombre">Nombre</label>
