--- a/src/views/products/list.ejs
+++ b/src/views/products/list.ejs
@@ -7,12 +7,12 @@
         <h2><%= locals.title ? title : null %> </h2>
         <% if (locals.products) { %> 
             <% if (products.length > 0) { %>
-             <ul>
+             <ul class="products">
                 <% products.forEach(product => { %>
                     <li class="product">
                         <a href="/products/<%= product.id %> ">
                             <% if (product.image) { %>
-                                <img src="/uploads/<%= product.image.url %>" alt="" srcset="">          
+                                <img src="/uploads/products<%= product.image.url %>" alt="" srcset="">          
                             <% } %>
                             <span>
                                 <%= product.name %> 
